# plann

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TASK_MANAGEMENT.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: linkcheck.yml  publish.yaml  tests.yaml
docs/: CALENDAR_SERVER_RECOMMENDATIONS.md
plann/: cli.py  commands.py  config.py  interactive.py  lib.py  timespec.py
tests/: test_functional.py  test_timespec.py
