[project]
name = "plann"
dynamic = ["version"]
description = "Simple command-line CalDAV client and planning tool, for adding and browsing calendar items, todo list items, etc."
authors = [{ name = "Tobias Brox", email = "t-plann@tobixen.no" }]
maintainers = [{ name = "Tobias Brox", email = "t-plann@tobixen.no" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
keywords = ["caldav", "calendar", "cli", "todo", "planning"]
dependencies = [
    "caldav>=1.5.0",
    "Click",
    "PyYAML",
    "sortedcontainers",
    "tzlocal",
    "python-dateutil",
    "icalendar",
]

[project.urls]
Homepage = "https://plann.no"
Repository = "https://github.com/pycalendar/plann"
Documentation = "https://plann.no"

[project.scripts]
plann = "plann.cli:cli"

[project.optional-dependencies]
dev = [
    "niquests",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "xandikos",
    "deptry>=0.24.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "plann/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["plann"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (many existing long lines)
]

[tool.ruff.lint.isort]
known-first-party = ["plann"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["plann"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["tzlocal"]  # Used indirectly by icalendar/caldav
